tests/sema/fail/fixed_width_narrowing.kl
// RUN: check
// COMPILE-FAIL
// EXPECT-EXIT: 65

int main() {
  int32 x = 42i64;
  return x;
}
